# loro-server

./: .gitignore  Cargo.toml  DESIGN.md  README.md  flake.nix  go.mod  go.sum  index.ts  justfile  package.json  script.ts
lorogo/localserver/: main.go
lorogo/transport/: coretransport.go  endpoints.go  jsonupdate.go  wal.go
lorogo/web/: awarenessws.go  createdocument.go  documentws.go  endpoints.go  websocket.go
lorojs/: indexeddb.ts  loro-client.ts
src/: main.rs  time.rs
src/transport/: core_transport.rs  document_endpoints.rs  initialize.rs  json_patch.rs  json_update.rs  mod.rs  serde.rs  wal.rs
src/webserver/: init_doc.rs  mod.rs  send_log.rs  webserver.rs
