[package]
name = "loro-server"
version = "0.1.0"
edition = "2024"

[dependencies]
async-nats = { version = "0.40.0", features = ["service"] }
bytes = "1.10.1"
chrono = "0.4.41"
futures = "0.3.31"
futures-util = "0.3.31"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1.11", features = ["tokio"] }
loro = { version = "1.5.1", features = ["jsonpath"] }
nanoid = "0.4.0"
pin-project-lite = "0.2.16"
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["rt-multi-thread", "signal", "time"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
twox-hash = "2.1.0"
unsigned-varint = "0.8.0"
