[package]
name = "loro-server"
version = "0.1.0"
edition = "2024"

[dependencies]
async-nats = { version = "0.42.0", features = ["service"] }
base64 = "0.22.1"
bytes = "1.10.1"
chrono = "0.4.42"
console-subscriber = "0.4.1"
futures = "0.3.31"
futures-util = "0.3.31"
jsonptr = "0.7.1"
loro = { version = "1.6.1", features = ["counter", "jsonpath"] }
nanoid = "0.4.0"
pin-project-lite = "0.2.16"
serde = "1.0.219"
serde_json = "1.0.143"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "signal", "time", "tracing"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
twox-hash = "2.1.2"
unsigned-varint = "0.8.0"
